# filter_component_pipeline

./: CMakeLists.txt  README.md  package.xml  plugin.xml
config/: example_pipeline.yaml
filter_component_base/: CMakeLists.txt  README.md  package.xml
filter_component_base/include/filter_component_base/ros/: component_descriptors.hpp  filter_chain_component.hpp  filter_component_base.hpp  parameter_utils.hpp
filter_component_base/src/: inspect_filter_components.cpp
filter_component_base/test/: test_filter_chain_component.cpp  test_filter_component_shm.cpp
filter_component_base_py/: CMakeLists.txt  README.md  package.xml
filter_component_base_py/filter_component_base_py/: __init__.py  component.py  intra_process.py  parameter_utils.py  ports.py  qos.py
filter_component_base_py/filter_component_base_py/adapters/: __init__.py  point_cloud2.py
filter_component_base_py/test/: test_intra_process.py  test_parameter_utils.py  test_point_cloud2_adapter.py
filter_component_factory_py/: CMakeLists.txt  README.md  package.xml
filter_component_factory_py/filter_component_factory_py/: __init__.py  component_container.py  graph_loader.py  runtime.py
filter_component_factory_py/scripts/: filter_pipeline_factory_py
filter_component_factory_py/test/: test_graph_loader.py
filter_component_python_examples/: CMakeLists.txt  README.md  package.xml
filter_component_python_examples/filter_component_python_examples/: __init__.py  passthrough_cloud.py
filter_component_python_examples/test/: test_passthrough_cloud.py
filter_component_synchronizer/: CMakeLists.txt  README.md  package.xml
filter_component_synchronizer/include/filter_component_synchronizer/: filter_component_synchronizer.hpp
filter_component_synchronizer/test/: test_filter_component_synchronizer.cpp
filter_component_synchronizer_py/: CMakeLists.txt  README.md  package.xml
filter_component_synchronizer_py/filter_component_synchronizer_py/: __init__.py  synchronizer.py
filter_component_synchronizer_py/test/: test_synchronizer.py
grid_map/grid_map_components_type_adapter/: CMakeLists.txt  README.md  package.xml
grid_map/grid_map_components_type_adapter/include/grid_map_components_type_adapter/ros/: grid_map_type_adapter.hpp
grid_map/grid_map_components_type_adapter/test/: test_type_adapter.cpp
pcl/: README.md
pcl/pcl_filter_components_filter_chain/: CMakeLists.txt  README.md  package.xml
pcl/pcl_filter_components_filter_chain/include/pcl_filter_components_filter_chain/ros/: filter_chain_components.hpp
pcl/pcl_filter_components_filter_chain/src/: filter_chain_components.cpp
pcl/pcl_filter_components_tests/: CMakeLists.txt  README.md  package.xml  test_filters_plugins.xml
pcl/pcl_filter_components_tests/test/: test_discovery.py  test_filter_chain_plugins.cpp
pcl/pcl_filter_components_tests/test/filters/: xyzi_filter_test_utils.hpp
pcl/pcl_filter_components_tests/test/filters/common/: test_crop_box_filter.cpp  test_passthrough_filter.cpp  test_voxel_grid_filter.cpp
pcl/pcl_filter_components_tests/test/filters/downsampling/: test_approximate_voxel_grid_filter.cpp  test_grid_minimum_filter.cpp  test_random_sample_filter.cpp  test_uniform_sampling_filter.cpp
pcl/pcl_filter_components_tests/test/filters/intensity/: test_intensity_range_filter.cpp  test_intensity_threshold_filter.cpp
pcl/pcl_filter_components_tests/test/filters/multi_input/: test_point_cloud_difference_filter.cpp  test_point_cloud_subtract_filter.cpp
pcl/pcl_filter_components_tests/test/filters/outlier_removal/: test_conditional_removal_filter.cpp  test_radius_outlier_removal_filter.cpp  test_statistical_outlier_removal_filter.cpp
pcl/pcl_filter_components_tests/test/filters/segmentation/: test_euclidean_cluster_extract_filter.cpp  test_plane_model_filter.cpp  test_sac_segmentation_extract_filter.cpp
pcl/pcl_filter_components_xyzrgba/: CMakeLists.txt  README.md  package.xml
pcl/pcl_filter_components_xyzrgba/src/color/: color_threshold_xyzrgba_component.cpp  rgb_range_xyzrgba_component.cpp  rgba_alpha_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/downsampling/: approximate_voxel_grid_xyzrgba_component.cpp  grid_minimum_xyzrgba_component.cpp  random_sample_xyzrgba_component.cpp  uniform_sampling_xyzrgba_component.cpp  voxel_grid_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/multi_input/: point_cloud_concatenate_xyzrgba_component.cpp  point_cloud_difference_xyzrgba_component.cpp  point_cloud_merger_xyzrgba_component.cpp  point_cloud_subtract_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/outlier_removal/: conditional_removal_xyzrgba_component.cpp  radius_outlier_removal_xyzrgba_component.cpp  statistical_outlier_removal_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/segmentation/: euclidean_cluster_extract_xyzrgba_component.cpp  plane_model_filter_xyzrgba_component.cpp  sac_segmentation_extract_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/selection/: extract_indices_xyzrgba_component.cpp  keep_organized_xyzrgba_component.cpp  passthrough_xyzrgba_component.cpp  remove_infinite_xyzrgba_component.cpp  remove_nan_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/spatial/: crop_box_xyzrgba_component.cpp  crop_sphere_xyzrgba_component.cpp  frustum_culling_xyzrgba_component.cpp  plane_clipper_xyzrgba_component.cpp  project_inliers_xyzrgba_component.cpp
pcl/pcl_filter_components_xyzrgba/src/surface/: bilateral_filter_xyzrgba_component.cpp  local_maximum_xyzrgba_component.cpp  median_filter_xyzrgba_component.cpp  morphological_filter_xyzrgba_component.cpp  moving_least_squares_xyzrgba_component.cpp  voxel_grid_covariance_xyzrgba_component.cpp
pcl_filter_synchronizer/: CMakeLists.txt  README.md  package.xml
pcl_filter_synchronizer/include/pcl_filter_synchronizer/: pcl_filter_synchronizer.hpp
pcl_filter_synchronizer/test/: test_pcl_filter_synchronizer.cpp
pcl_filter_xyz/: CMakeLists.txt  README.md  package.xml
pcl_filter_xyzi/: CMakeLists.txt  README.md  package.xml
pcl_filter_xyzrgb/: CMakeLists.txt  README.md  package.xml
(+269 files in other folders)
