<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyz</name>
  <version>0.1.0</version>
  <description>PointXYZ instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_synchronizer</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZ"
      type_adapter="pcl_filter_xyz::ros::PclCloudAdapterPointXYZ"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="PassThroughXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="CropBoxXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="ApproximateVoxelGridXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="UniformSamplingXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="RandomSampleXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="GridMinimumXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="StatisticalOutlierRemovalXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="RadiusOutlierRemovalXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="ConditionalRemovalXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="ExtractIndicesXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="RemoveNaNXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="RemoveInfiniteXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="KeepOrganizedXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="FrustumCullingXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="CropSphereXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="ProjectInliersXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="PlaneClipperXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="MedianFilterXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="LocalMaximumXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="BilateralFilterXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="VoxelGridCovarianceXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="MorphologicalFilterXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="MovingLeastSquaresXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="PlaneModelFilterXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="SACSegmentationExtractXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="EuclideanClusterExtractXYZ"
      input="PointXYZ"
      input_ports="cloud:PointXYZ"
      output="PointXYZ,PointIndices"
      output_ports="cloud:PointXYZ,indices:PointIndices,orig_cloud:PointXYZ"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZ"
      input="PointXYZ,PointXYZ"
      input_ports="input_1:PointXYZ,input_2:PointXYZ"
      output="PointXYZ"
      output_ports="cloud:PointXYZ,orig_input_1:PointXYZ,orig_input_2:PointXYZ"/>
    <pcl_filter_component
      filter="PointCloudConcatenateXYZ"
      input="PointXYZ,PointXYZ"
      input_ports="input_1:PointXYZ,input_2:PointXYZ"
      output="PointXYZ"
      output_ports="cloud:PointXYZ,orig_input_1:PointXYZ,orig_input_2:PointXYZ"/>
    <pcl_filter_component
      filter="PointCloudSubtractXYZ"
      input="PointXYZ,PointXYZ"
      input_ports="input_1:PointXYZ,input_2:PointXYZ"
      output="PointXYZ"
      output_ports="cloud:PointXYZ,orig_input_1:PointXYZ,orig_input_2:PointXYZ"/>
    <pcl_filter_component
      filter="PointCloudDifferenceXYZ"
      input="PointXYZ,PointXYZ"
      input_ports="input_1:PointXYZ,input_2:PointXYZ"
      output="PointXYZ"
      output_ports="cloud:PointXYZ,orig_input_1:PointXYZ,orig_input_2:PointXYZ"/>
  </export>
</package>
