<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyzi</name>
  <version>0.1.0</version>
  <description>PointXYZI instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_synchronizer</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZI"
      type_adapter="pcl_filter_xyzi::ros::PclCloudAdapterPointXYZI"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="PassThroughXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="CropBoxXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="ApproximateVoxelGridXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="UniformSamplingXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="RandomSampleXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="GridMinimumXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="StatisticalOutlierRemovalXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="RadiusOutlierRemovalXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="ConditionalRemovalXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="ExtractIndicesXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="RemoveNaNXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="RemoveInfiniteXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="KeepOrganizedXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="FrustumCullingXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="CropSphereXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="ProjectInliersXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="PlaneClipperXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="MedianFilterXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="LocalMaximumXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="BilateralFilterXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="VoxelGridCovarianceXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="MorphologicalFilterXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="MovingLeastSquaresXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="PlaneModelFilterXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="SACSegmentationExtractXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="EuclideanClusterExtractXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="IntensityThresholdXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="IntensityRangeFilterXYZI"
      input="PointXYZI"
      input_ports="cloud:PointXYZI"
      output="PointXYZI,PointIndices"
      output_ports="cloud:PointXYZI,indices:PointIndices,orig_cloud:PointXYZI"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZI"
      input="PointXYZI,PointXYZI"
      input_ports="input_1:PointXYZI,input_2:PointXYZI"
      output="PointXYZI"
      output_ports="cloud:PointXYZI,orig_input_1:PointXYZI,orig_input_2:PointXYZI"/>
    <pcl_filter_component
      filter="PointCloudConcatenateXYZI"
      input="PointXYZI,PointXYZI"
      input_ports="input_1:PointXYZI,input_2:PointXYZI"
      output="PointXYZI"
      output_ports="cloud:PointXYZI,orig_input_1:PointXYZI,orig_input_2:PointXYZI"/>
    <pcl_filter_component
      filter="PointCloudSubtractXYZI"
      input="PointXYZI,PointXYZI"
      input_ports="input_1:PointXYZI,input_2:PointXYZI"
      output="PointXYZI"
      output_ports="cloud:PointXYZI,orig_input_1:PointXYZI,orig_input_2:PointXYZI"/>
    <pcl_filter_component
      filter="PointCloudDifferenceXYZI"
      input="PointXYZI,PointXYZI"
      input_ports="input_1:PointXYZI,input_2:PointXYZI"
      output="PointXYZI"
      output_ports="cloud:PointXYZI,orig_input_1:PointXYZI,orig_input_2:PointXYZI"/>
  </export>
</package>
