<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyzrgb</name>
  <version>0.1.0</version>
  <description>PointXYZRGB instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_synchronizer</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZRGB"
      type_adapter="pcl_filter_xyzrgb::ros::PclCloudAdapterPointXYZRGB"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="PassThroughXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="CropBoxXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="ApproximateVoxelGridXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="UniformSamplingXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="RandomSampleXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="GridMinimumXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="StatisticalOutlierRemovalXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="RadiusOutlierRemovalXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="ConditionalRemovalXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="ExtractIndicesXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="RemoveNaNXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="RemoveInfiniteXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="KeepOrganizedXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="FrustumCullingXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="CropSphereXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="ProjectInliersXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="PlaneClipperXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="MedianFilterXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="LocalMaximumXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="BilateralFilterXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="VoxelGridCovarianceXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="MorphologicalFilterXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="MovingLeastSquaresXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="PlaneModelFilterXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="SACSegmentationExtractXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="EuclideanClusterExtractXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="ColorThresholdXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="RGBRangeFilterXYZRGB"
      input="PointXYZRGB"
      input_ports="cloud:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_cloud:PointXYZRGB"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZRGB"
      input="PointXYZRGB,PointXYZRGB"
      input_ports="input_1:PointXYZRGB,input_2:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_input_1:PointXYZRGB,orig_input_2:PointXYZRGB"/>
    <pcl_filter_component
      filter="PointCloudConcatenateXYZRGB"
      input="PointXYZRGB,PointXYZRGB"
      input_ports="input_1:PointXYZRGB,input_2:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_input_1:PointXYZRGB,orig_input_2:PointXYZRGB"/>
    <pcl_filter_component
      filter="PointCloudSubtractXYZRGB"
      input="PointXYZRGB,PointXYZRGB"
      input_ports="input_1:PointXYZRGB,input_2:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_input_1:PointXYZRGB,orig_input_2:PointXYZRGB"/>
    <pcl_filter_component
      filter="PointCloudDifferenceXYZRGB"
      input="PointXYZRGB,PointXYZRGB"
      input_ports="input_1:PointXYZRGB,input_2:PointXYZRGB"
      output="PointXYZRGB"
      output_ports="cloud:PointXYZRGB,orig_input_1:PointXYZRGB,orig_input_2:PointXYZRGB"/>
  </export>
</package>
